# cicaddy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  PHASE1-2-COMPLETE.md  README.md  SCANNING-REVIEW.md  SHARED_TASK_NOTES.md  githubpr_20260321_123503.html  githubpr_20260321_123503.json  githubpr_20260321_125208.html  githubpr_20260321_125208.json  githubpr_20260321_154154.html  githubpr_20260321_154154.json  pyproject.toml  session_20260321_123445_542_ae9ecd85.jsonl  session_20260321_124411_653_710a8006.jsonl  session_20260321_124411_654_06f5323d.jsonl  session_20260321_124411_658_50270a47.jsonl  session_20260321_124411_661_df4b52f3.jsonl  session_20260321_124411_668_04d797af.jsonl  session_20260321_124411_670_7496c7ff.jsonl  session_20260321_124411_672_9f081468.jsonl  session_20260321_124411_674_e0515eaa.jsonl  session_20260321_124411_675_e1b6f86b.jsonl  session_20260321_125140_953_371902fa.jsonl  session_20260321_154136_734_7a4d2ea7.jsonl
.agents/agents/: cicaddy-eval.md  cicaddy-runner.md
.agents/skills/cicaddy/: SKILL.md
.claude/skills/cicaddy/: SKILL.md
.github/workflows/: ci.yml  python-publish.yml  snyk.yml
Research/: prompt-injection-defense-agent-systems.md
docs/: SCANNING-REVIEW.md  architecture.md  mcp-integration.md  mcp-security-scanning.md  metadata-architecture.md  phase1-implementation-summary.md  phase2-implementation-summary.md  sub-agent-delegation.md  token-aware-execution.md
examples/: dora_metrics_task.yaml
examples/delegation/: delegation_review.env
examples/delegation/review/: compliance-reviewer.yaml  dependency-reviewer.yaml
examples/templates/: report_template.html
src/cicaddy/: __init__.py  knowledge.py  plugin.py  rules.py  skills.py
src/cicaddy/agent/: __init__.py  base.py  base_review_agent.py  branch_agent.py  cron_agent.py  factory.py  mr_agent.py  task_agent.py
src/cicaddy/ai_providers/: __init__.py  base.py  claude.py  factory.py  gemini.py  openai.py
src/cicaddy/cli/: __init__.py  arg_mapping.py  commands.py  env_loader.py  graph_context.py  main.py
src/cicaddy/config/: __init__.py  advanced_settings.py  settings.py
src/cicaddy/delegation/: __init__.py  line_resolver.py  orchestrator.py  registry.py  sub_agent.py  summarizer.py  triage.py
src/cicaddy/dspy/: __init__.py  prompt_builder.py  task_loader.py  task_schema.py
src/cicaddy/execution/: __init__.py  context_compactor.py  engine.py  error_classifier.py  event_log.py  knowledge_store.py  progressive_analyzer.py  progressive_memory.py  recovery.py  result_formatter.py  steps.py  summary_validator.py  token_aware_executor.py  tool_result_processor.py  turn.py
src/cicaddy/git/: __init__.py  diff_analyzer.py
src/cicaddy/mcp_client/: __init__.py  cache.py  circuit_breaker.py  client.py  composite_scanner.py  connection_pool.py  enterprise_client.py  llm_guard_scanner.py  metrics.py  quota_detector.py  retry.py  scanner.py  security.py  telemetry.py
src/cicaddy/notifications/: __init__.py  base.py  email.py  formatters.py  rich_slack.py  slack.py
tests/: conftest.py  test_knowledge.py  test_quota_detector.py
tests/unit/: test_agent_factory_mcp.py  test_claude_vertex.py  test_cli.py  test_composite_scanner.py  test_context_compactor.py  test_cron_agent_email.py  test_delegation_cli_integration.py  test_delegation_orchestrator.py  test_delegation_registry.py  test_delegation_sub_agent.py  test_delegation_summarizer.py  test_delegation_triage.py  test_dspy_integration.py  test_email_notifier.py  test_enterprise_features.py  test_gemini_tool_calling.py  test_gemini_vertex.py  test_html_formatter.py  test_knowledge_store.py  test_line_resolver.py  test_llm_guard_scanner.py  test_local_tools.py  test_logger.py  test_mcp_official_client.py  test_mcp_scanner.py  test_mr_agent.py  test_plugin.py  test_progressive_analyzer.py  test_progressive_memory.py  test_provenance.py  test_provider_factory.py  test_recovery.py  test_result_formatter.py  test_retry_functionality.py  test_rules.py  test_rules_scanning.py  test_security_validation.py  test_settings.py  test_skills.py  test_skills_scanning.py  (+10 more)
(+41 files in other folders)
